# evermemos-openapi-samples

./: .env.example  .gitignore  Makefile  README.md  openapi.json  pyproject.toml
data/: guichuideng-jingjuegucheng.txt
docs/: multimodal-auto-upload-2026-04-02.md  sdk-source-analysis-0330.md
docs/issues/: multimodal-nonexistent-file-silent-skip-2026-04-03.md
docs/openapi-specs/: openapi-0330.json
examples/: 01_add_sync.py  02_add_async.py  03_get_sync.py  04_search_sync.py  05_delete_sync.py  06_flush_sync.py  07_agent_memories.py  08_group_memories.py  09_groups_senders.py  10_object_sign.py  11_conversation_meta.py  11_multimodal_memory.py  12_batch_import.py  Makefile  README.md  add_async.py  add_get_sync.py  add_sync.py  batch_add_async.py  create_meta_async.py  curl_samples.sh  delete_async.py  get_async.py  get_meta_async.py  get_request_status_async.py  import_memories_async.py  openapi.json  search_async.py  update_meta_async.py  upsert_custom_profile_async.py
examples/cases/: batch_add_async.py
examples/cookbook/: README.md  quickstart.md  quickstart_adk_complete.py  quickstart_api.py  quickstart_sdk_async.py  quickstart_sdk_complete.py  quickstart_sdk_sync.py
examples/getting-started/: 03.1_save_text.py  03.2_save_multi_modal.py  03.3_save_multi_modal_official.py  03.3_save_multi_modal_simple.py  03.4_save_multi_modal_debug.py  03_save.py  04.1_get.py  04.2_search.py
examples/v0/: Makefile  add_async.py  add_get_sync.py  delete_async.py  get_request_status_async.py  reproduce_bugs.py  search_async.py
examples/v1/: Makefile  add_async.py  (+9 more)
(+14 files in other folders)
